# ccc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  conanfile.txt
chapter_1/: CMakeLists.txt  exercise_1_1.cpp  listing_1_1.cpp  listing_1_2.cpp  listing_1_4.cpp  listing_1_7.cpp  listing_1_8.cpp
chapter_10/: CMakeLists.txt
chapter_10/austere/: main.cpp
chapter_10/boost/: minimal.cpp  tests.cpp
chapter_10/catch/: minimal.cpp  tests.cpp
chapter_10/gtest/: main.cpp  minimal.cpp
chapter_11/: CMakeLists.txt  complex.cpp  container.cpp  data_structs.cpp  rand.cpp  smart_ptrs.cpp  time.cpp
chapter_12/: CMakeLists.txt  complex.cpp  data_structs.cpp  rand.cpp  smart_ptrs.cpp  time.cpp
chapter_13/: CMakeLists.txt  associative_containers.cpp  graph.cpp  ptree.cpp  sequential_containers.cpp
chapter_14/: CMakeLists.txt  iterators.cpp
chapter_15/: CMakeLists.txt  c_str_example.cpp  strings.cpp
chapter_16/: CMakeLists.txt  listing_16_1.cpp  listing_16_10.cpp  listing_16_14.cpp  listing_16_15.cpp  listing_16_16.cpp  listing_16_17.cpp  listing_16_18.cpp  listing_16_19.cpp  listing_16_2.cpp  listing_16_3.cpp  listing_16_5.cpp  listing_16_7.cpp  listing_16_8.cpp  listing_16_9.cpp  numbers.txt  streams.cpp  yoda.txt
chapter_17/: CMakeLists.txt  filesystem.cpp  introspection.txt  listing_17_2.cpp  listing_17_3.cpp  listing_17_4.cpp  listing_17_5.cpp  listing_17_6.cpp  listing_17_7.cpp  listing_17_8.cpp  listing_17_9.cpp
chapter_18/: CMakeLists.txt  algorithms.cpp  explore.cpp  numerics.cpp  sample.cpp  shuffle.cpp
chapter_19/: CMakeLists.txt  concurrency.cpp  factor_parallel.cpp  factor_serial.cpp  goat_rodeo.cpp  goat_rodeo_atomic.cpp  goat_rodeo_cv.cpp  goat_rodeo_guards.cpp  goat_rodeo_locks.cpp  parallelism.cpp  undefined_parallel.cpp
chapter_2/: CMakeLists.txt  listing_2_1.cpp  listing_2_10.cpp  listing_2_11.cpp  listing_2_12.cpp  listing_2_15.cpp  listing_2_16.cpp  listing_2_18.cpp  listing_2_19.cpp  listing_2_2.cpp  listing_2_20.cpp  listing_2_21.cpp  listing_2_22.cpp  listing_2_23.cpp  listing_2_24.cpp  listing_2_25.cpp  listing_2_27.cpp  listing_2_3.cpp  listing_2_4.cpp  listing_2_5.cpp  listing_2_6.cpp  listing_2_7.cpp  listing_2_8.cpp  listing_2_9.cpp
chapter_20/: CMakeLists.txt  asio.cpp  buffers.cpp  connect.cpp  connect_async.cpp  name_resolution.cpp  name_resolution_async.cpp  upper_echo_server.cpp  upper_echo_server_async.cpp  upper_echo_server_multi.cpp  web_request.cpp  web_request_async.cpp  web_request_async_multi.cpp
chapter_21/: CMakeLists.txt  abort.cpp  atexit.cpp  dedication.cpp  exit.cpp  getenv.cpp  ping.cpp  program_options.cpp  quickexit.cpp  sigint.cpp  template.cpp
chapter_3/: CMakeLists.txt  listing_3_1.cpp  listing_3_10.cpp  listing_3_11.cpp  listing_3_18.cpp  listing_3_2.cpp  listing_3_3.cpp  listing_3_4.cpp  listing_3_5.cpp  listing_3_6.cpp  listing_3_7.cpp  listing_3_8.cpp
chapter_4/: CMakeLists.txt  listing_4_13.cpp  listing_4_16.cpp  listing_4_19.cpp  listing_4_2.cpp  listing_4_20.cpp  listing_4_22.cpp  listing_4_27.cpp  listing_4_28.cpp  listing_4_3.cpp  listing_4_32.cpp  listing_4_33.cpp  listing_4_34.cpp  listing_4_36.cpp  listing_4_37.cpp  listing_4_4.cpp  listing_4_6.cpp  listing_4_9.cpp
chapter_5/: CMakeLists.txt  listing_5_1.cpp  listing_5_11.cpp  listing_5_12.cpp  listing_5_13.cpp  listing_5_2.cpp  listing_5_21.cpp  listing_5_26.cpp  listing_5_33.cpp  listing_5_4.cpp  listing_5_5.cpp  listing_5_6.cpp  listing_5_7.cpp  listing_5_8.cpp  listing_5_9.cpp
chapter_6/: CMakeLists.txt  listing_6_11.cpp  listing_6_12.cpp  listing_6_13.cpp  listing_6_15.cpp  listing_6_17.cpp  listing_6_18.cpp  listing_6_21.cpp  listing_6_22.cpp  listing_6_26.cpp  listing_6_33.cpp  listing_6_4.cpp  listing_6_7.cpp
chapter_7/: CMakeLists.txt  listing_7_1.cpp  listing_7_10.cpp  listing_7_11.cpp  listing_7_12.cpp  listing_7_13.cpp  listing_7_14.cpp  listing_7_16.cpp  listing_7_3.cpp  listing_7_6.cpp  listing_7_7.cpp  listing_7_8.cpp  listing_7_9.cpp  listing_7_a.cpp  listing_7_b.cpp
chapter_8/: CMakeLists.txt  listing_8_1.cpp  listing_8_11.cpp  listing_8_12.cpp  listing_8_13.cpp  listing_8_14.cpp  listing_8_15.cpp  listing_8_16.cpp  listing_8_17.cpp  listing_8_18.cpp  listing_8_19.cpp  listing_8_2.cpp  listing_8_20.cpp  listing_8_21.cpp  listing_8_22.cpp  listing_8_23.cpp  listing_8_24.cpp  listing_8_26.cpp  listing_8_27.cpp  listing_8_28.cpp  listing_8_29.cpp  listing_8_3.cpp  listing_8_30.cpp  listing_8_31.cpp  listing_8_4.cpp  listing_8_5.cpp  listing_8_6.cpp  listing_8_7.cpp  listing_8_8.cpp  listing_8_9.cpp
chapter_9/: CMakeLists.txt  listing_9_1.cpp  listing_9_10.cpp  listing_9_12.cpp  listing_9_13.cpp  listing_9_15.cpp  listing_9_16.cpp  listing_9_17.cpp  listing_9_18.cpp  listing_9_19.cpp  listing_9_2.cpp  listing_9_22.cpp  listing_9_24.cpp  listing_9_25.cpp  listing_9_26.cpp  listing_9_27.cpp  listing_9_29.cpp  listing_9_3.cpp  listing_9_33.cpp  listing_9_34.cpp  listing_9_4.cpp  listing_9_5.cpp  listing_9_8.cpp  listing_9_9.cpp
docs/: CNAME  cover.css  index.html
preface/: CMakeLists.txt  listing_p_1.cpp  listing_p_10.cpp  listing_p_12.cpp  listing_p_16.cpp  listing_p_19.cpp  listing_p_20.cpp  listing_p_22.cpp  listing_p_25.cpp  listing_p_26.cpp  listing_p_27.cpp  listing_p_3.cpp  listing_p_8.cpp  listing_p_9.cpp
