cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_1 LANGUAGES CXX)

add_executable(listing_1_1 listing_1_1.cpp)
add_executable(listing_1_2 listing_1_2.cpp)
add_executable(listing_1_4 listing_1_4.cpp)
add_executable(listing_1_7 listing_1_7.cpp)
add_executable(listing_1_8 listing_1_8.cpp)
add_executable(exercise_1_1 exercise_1_1.cpp)