cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_16 LANGUAGES CXX)

add_executable(listing_16_1 listing_16_1.cpp)
add_executable(listing_16_2 listing_16_2.cpp)
add_executable(listing_16_3 listing_16_3.cpp)
add_executable(listing_16_5 listing_16_5.cpp)
add_executable(listing_16_7 listing_16_7.cpp)
add_executable(listing_16_8 listing_16_8.cpp)
add_executable(listing_16_9 listing_16_9.cpp)
add_executable(listing_16_10 listing_16_10.cpp)
add_executable(listing_16_14 listing_16_14.cpp)
add_executable(listing_16_15 listing_16_15.cpp)
add_executable(listing_16_16 listing_16_16.cpp)
add_executable(listing_16_17 listing_16_17.cpp)
add_executable(listing_16_18 listing_16_18.cpp)
add_executable(listing_16_19 listing_16_19.cpp)
catch_add_test(streams streams.cpp)

target_link_libraries(streams PRIVATE ${Boost_SYSTEM_LIBRARY})
