cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_2 LANGUAGES CXX)

add_executable(listing_2_1 listing_2_1.cpp)
add_executable(listing_2_2 listing_2_2.cpp)
add_executable(listing_2_3 listing_2_3.cpp)
add_executable(listing_2_4 listing_2_4.cpp)
add_executable(listing_2_5 listing_2_5.cpp)
add_executable(listing_2_6 listing_2_6.cpp)
add_executable(listing_2_7 listing_2_7.cpp)
add_executable(listing_2_8 listing_2_8.cpp)
add_executable(listing_2_9 listing_2_9.cpp)
add_executable(listing_2_10 listing_2_10.cpp)
add_executable(listing_2_11 listing_2_11.cpp)
add_executable(listing_2_12 listing_2_12.cpp)
add_executable(listing_2_15 listing_2_15.cpp)
add_executable(listing_2_16 listing_2_16.cpp)
add_executable(listing_2_18 listing_2_18.cpp)
add_executable(listing_2_19 listing_2_19.cpp)
add_executable(listing_2_20 listing_2_20.cpp)
add_executable(listing_2_21 listing_2_21.cpp)
add_executable(listing_2_22 listing_2_22.cpp)
add_executable(listing_2_23 listing_2_23.cpp)
add_executable(listing_2_24 listing_2_24.cpp)
add_executable(listing_2_25 listing_2_25.cpp)
add_executable(listing_2_27 listing_2_27.cpp)