cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_3 LANGUAGES CXX)

add_executable(listing_3_1 listing_3_1.cpp)
add_executable(listing_3_2 listing_3_2.cpp)
add_executable(listing_3_3 listing_3_3.cpp)
add_executable(listing_3_4 listing_3_4.cpp)
add_executable(listing_3_5 listing_3_5.cpp)
add_executable(listing_3_6 listing_3_6.cpp)
add_executable(listing_3_7 listing_3_7.cpp)
add_executable(listing_3_8 listing_3_8.cpp)
add_executable(listing_3_10 listing_3_10.cpp)
add_executable(listing_3_11 listing_3_11.cpp)
add_executable(listing_3_18 listing_3_18.cpp)