add_executable(listing_4_2 listing_4_2.cpp)
add_executable(listing_4_3 listing_4_3.cpp)
add_executable(listing_4_4 listing_4_4.cpp)
add_executable(listing_4_6 listing_4_6.cpp)
add_executable(listing_4_9 listing_4_9.cpp)
add_executable(listing_4_15 listing_4_15.cpp)
add_executable(listing_4_18 listing_4_18.cpp)
add_executable(listing_4_19 listing_4_19.cpp)
add_executable(listing_4_22 listing_4_22.cpp)
add_executable(listing_4_26 listing_4_26.cpp)
add_executable(listing_4_27 listing_4_27.cpp)
add_executable(listing_4_32 listing_4_32.cpp)
add_executable(listing_4_33 listing_4_33.cpp)
add_executable(listing_4_36 listing_4_36.cpp)
