cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_4 LANGUAGES CXX)

add_executable(listing_4_2 listing_4_2.cpp)
add_executable(listing_4_3 listing_4_3.cpp)
add_executable(listing_4_4 listing_4_4.cpp)
add_executable(listing_4_6 listing_4_6.cpp)
add_executable(listing_4_9 listing_4_9.cpp)
add_executable(listing_4_13 listing_4_13.cpp)
add_executable(listing_4_16 listing_4_16.cpp)
add_executable(listing_4_19 listing_4_19.cpp)
add_executable(listing_4_20 listing_4_20.cpp)
add_executable(listing_4_23 listing_4_23.cpp)
add_executable(listing_4_27 listing_4_27.cpp)
add_executable(listing_4_28 listing_4_28.cpp)
add_executable(listing_4_33 listing_4_33.cpp)
add_executable(listing_4_34 listing_4_34.cpp)
add_executable(listing_4_37 listing_4_37.cpp)
