cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_7 LANGUAGES CXX)

add_executable(listing_7_a listing_7_a.cpp)
add_executable(listing_7_b listing_7_b.cpp)
add_executable(listing_7_1 listing_7_1.cpp)
add_executable(listing_7_3 listing_7_3.cpp)
add_executable(listing_7_6 listing_7_6.cpp)
add_executable(listing_7_7 listing_7_7.cpp)
add_executable(listing_7_8 listing_7_8.cpp)
add_executable(listing_7_9 listing_7_9.cpp)
add_executable(listing_7_10 listing_7_10.cpp)
add_executable(listing_7_11 listing_7_11.cpp)
add_executable(listing_7_12 listing_7_12.cpp)
add_executable(listing_7_13 listing_7_13.cpp)
add_executable(listing_7_14 listing_7_14.cpp)
add_executable(listing_7_16 listing_7_16.cpp)
