add_executable(listing_8_1 listing_8_1.cpp)
add_executable(listing_8_2 listing_8_2.cpp)
add_executable(listing_8_3 listing_8_3.cpp)
add_executable(listing_8_4 listing_8_4.cpp)
add_executable(listing_8_5 listing_8_5.cpp)
add_executable(listing_8_6 listing_8_6.cpp)
add_executable(listing_8_7 listing_8_7.cpp)
add_executable(listing_8_8 listing_8_8.cpp)
add_executable(listing_8_10 listing_8_10.cpp)
add_executable(listing_8_11 listing_8_11.cpp)
add_executable(listing_8_13 listing_8_13.cpp)
add_executable(listing_8_15 listing_8_15.cpp)
add_executable(listing_8_17 listing_8_17.cpp)
add_executable(listing_8_18 listing_8_18.cpp)
add_executable(listing_8_19 listing_8_19.cpp)
add_executable(listing_8_20 listing_8_20.cpp)
add_executable(listing_8_22 listing_8_22.cpp)
add_executable(listing_8_23 listing_8_23.cpp)
add_executable(listing_8_26 listing_8_26.cpp)
add_executable(listing_8_27 listing_8_27.cpp)
add_executable(listing_8_28 listing_8_28.cpp)
add_executable(listing_8_29 listing_8_29.cpp)
add_executable(listing_8_30 listing_8_30.cpp)
add_executable(listing_8_31 listing_8_31.cpp)
