cmake_minimum_required(VERSION 3.1...3.14)

project(chapter_9 LANGUAGES CXX)

add_executable(listing_9_1 listing_9_1.cpp)
add_executable(listing_9_2 listing_9_2.cpp)
add_executable(listing_9_3 listing_9_3.cpp)
add_executable(listing_9_4 listing_9_4.cpp)
add_executable(listing_9_5 listing_9_5.cpp)
add_executable(listing_9_8 listing_9_8.cpp)
add_executable(listing_9_9 listing_9_9.cpp)
add_executable(listing_9_10 listing_9_10.cpp)
add_executable(listing_9_12 listing_9_12.cpp)
add_executable(listing_9_13 listing_9_13.cpp)
add_executable(listing_9_15 listing_9_15.cpp)
add_executable(listing_9_16 listing_9_16.cpp)
add_executable(listing_9_17 listing_9_17.cpp)
add_executable(listing_9_18 listing_9_18.cpp)
add_executable(listing_9_19 listing_9_19.cpp)
add_executable(listing_9_22 listing_9_22.cpp)
add_executable(listing_9_24 listing_9_24.cpp)
add_executable(listing_9_25 listing_9_25.cpp)
add_executable(listing_9_26 listing_9_26.cpp)
add_executable(listing_9_27 listing_9_27.cpp)
add_executable(listing_9_29 listing_9_29.cpp)
add_executable(listing_9_33 listing_9_33.cpp)
